tests/posts/invalid/missing-body.markdown
Title: Missing body

Tags: News, Slugs, PHP

Slug: missing-body

Date: 2014-06-10 00:00:00

; Body:
